--- a/WebShopREST/WebShopREST/WebContent/styles.css
+++ b/WebShopREST/WebShopREST/WebContent/styles.css
@@ -14,15 +14,80 @@ body {
 }
 
 #titleRectangle {
+	position: relative;
     background: gray;
-    text-align: center;
 }
 
 #titleText {
+	position: relative;
+	left: 25px;
 	font-family: Georgia, serif;
 	text-align: center;
 	vertical-align: middle;
 	line-height: 90px;
 	font-size: 50px;
 	color: white;
+}
+
+#titlePhoto {
+	position: absolute;
+	width: 50px;
+	height: 50px;
+	top: 50%;
+	left: 50%;
+	margin-top: -25px;
+	margin-left: -125px;
+}
+
+#photo {
+	width: 100px;
+	height: 100px;
+}
+
+#searchIcon {
+	width: 27px;
+	height: 27px;
+	position: relative;
+	top: 14px;
+	right: 2px;
+}
+
+#restaurantsRectangle{
+	position: relative;
+    background: gray;
+    display: grid;
+  	place-items: center;
+  	width: 65%;
+  	left: 17.5%;
+}
+
+#restaurantsTable{
+	border-collapse: collapse;
+	border: 1px solid black;
+	font-family: Georgia, serif;
+	text-align: center;
+	vertical-align: middle;
+}
+
+td, th {
+	padding: 15px;
+	border-bottom: 1px solid black;
+}
+
+input, select {
+	padding: 5px;
+}
+
+div button {
+	padding: 5px;
+}
+
+#typesFilter {
+	position: relative;
+	right: 17.5%;
+	float: left;
+}
+
+#statusFilter {
+	float: left;
 }
