--- a/WebShopREST/WebShopREST/WebContent/styles.css
+++ b/WebShopREST/WebShopREST/WebContent/styles.css
@@ -1,11 +1,3 @@
-tr.selected {
-	background: lightblue;
-}
-
-tr {
-	cursor: pointer;
-}
-
 body {
 	background-image: url('background.jpg');
     background-attachment: fixed;
@@ -15,31 +7,56 @@ body {
 
 #titleRectangle {
 	position: relative;
-    background: gray;
+    background: rgba(241, 190, 72, 0.897);
+	border-radius: 25px;
 }
 
 #titleText {
-	position: relative;
-	left: 25px;
-	font-family: Georgia, serif;
+	font-family: Lucida Handwriting;
 	text-align: center;
 	vertical-align: middle;
 	line-height: 90px;
-	font-size: 50px;
-	color: white;
+	font-size: 45px;
+	color: black;
 }
 
-#titlePhoto {
-	position: absolute;
-	width: 50px;
-	height: 50px;
-	top: 50%;
-	left: 50%;
-	margin-top: -25px;
-	margin-left: -125px;
+#promoText1 {
+	color: black;
+	font-family: Lucida Handwriting;
+	text-align: left;
+	font-size: 40px;
 }
 
-#photo {
+#promoText2 {
+	color: black;
+	font-family: Lucida Handwriting;
+	text-align: left;
+	font-size: 40px;
+}
+
+.signInBtns {
+	color: black;
+	font-weight: 200;
+	background-color: rgb(241, 190, 72);
+	width: 110px;
+	height: 40px;
+	font-size: 15px;
+	border-style: ridge;
+	border-radius: 15px;
+	border-color: rgb(214, 164, 45);
+	border-width: 3px;
+	font-weight: bold;
+	float: right;
+	margin-top: 0.5%;
+	margin-right: 1%;
+}
+
+#navBar {
+	list-style: none;
+	display: flex;
+}
+
+.photo {
 	width: 100px;
 	height: 100px;
 }
@@ -54,25 +71,37 @@ body {
 
 #restaurantsRectangle{
 	position: relative;
-    background: gray;
-    display: grid;
-  	place-items: center;
-  	width: 65%;
-  	left: 17.5%;
+    background: rgba(241, 190, 72, 0.774);
+	display: grid;
+	place-items: left;
+	border-radius: 25px;
 }
 
 #restaurantsTable{
-	border-collapse: collapse;
-	border: 1px solid black;
+	border-style: ridge;
+	border-radius: 15px;
+	border-color: rgb(214, 164, 45);
+	border-width: 3px;
 	font-family: Georgia, serif;
 	text-align: center;
-	vertical-align: middle;
+	background-color: rgba(199, 207, 199, 0.76);
+	color: black;
+	font-size: 12pt;
 }
 
 td, th {
 	padding: 15px;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid rgb(177, 135, 38);
 }
+
+tr.selected {
+	background: lightblue;
+}
+
+tr {
+	cursor: pointer;
+}
+
 
 input, select {
 	padding: 5px;
@@ -83,11 +112,33 @@ div button {
 }
 
 #typesFilter {
-	position: relative;
-	right: 17.5%;
 	float: left;
+	padding-right: 5%;
 }
 
 #statusFilter {
 	float: left;
+}
+
+.inputBoxes {
+	border-radius: 15px;
+	text-align: left;
+	height: 20px;
+	background-color: rgb(199, 207, 199);
+	font-size: 13pt;
+}
+
+.dropdownBoxes {
+	border-radius: 15px;
+	text-align: left;
+	height: 33px;
+	background-color: rgb(199, 207, 199);
+	font-size: 13pt;
+}
+
+.searchText {
+	color: black;
+	font-weight: bold;
+	padding-right: 13px;
+	font-size: 13pt;
 }
