--- a/WebShopREST/WebShopREST/WebContent/administrator.css
+++ b/WebShopREST/WebShopREST/WebContent/administrator.css
@@ -20,7 +20,7 @@ body {
 	color: black;
 }
 
-#restaurantsRectangle{
+#usersRectangle{
 	position: relative;
     background: rgba(241, 190, 72, 0.774);
 	display: grid;
@@ -54,6 +54,7 @@ body {
 	border-radius: 15px;
 	text-align: left;
 	height: 33px;
+	width: 165px;
 	background-color: rgb(199, 207, 199);
 	font-size: 13pt;
 	cursor: pointer;
@@ -112,9 +113,11 @@ tr {
 	float: right;
 	margin-top: 0.5%;
 	margin-right: 1%;
+	cursor: pointer;
 }
 
 .administratorBtns {
+	cursor: pointer;
 	color: black;
 	font-weight: 200;
 	background-color: rgb(241, 190, 72);
