--- a/WebShopREST/WebShopREST/WebContent/managerRegister.css
+++ b/WebShopREST/WebShopREST/WebContent/managerRegister.css
@@ -32,10 +32,9 @@ body {
 }
 
 .container {
-    position: absolute;
-    top: 55%;
+    position: relative;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0%);
 }
 
 .container {
