--- a/WebShopREST/WebShopREST/WebContent/register.css
+++ b/WebShopREST/WebShopREST/WebContent/register.css
@@ -11,13 +11,13 @@ body {
     height: 100vh;
     width: 100%;
     background: linear-gradient(115deg, rgba(199, 207, 199, 0.76) 10%, rgb(214, 164, 45) 90%);
+	background-attachment: fixed;
 }
 
 .container {
-    position: absolute;
-    top: 50%;
+    position: relative;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 10%);
 }
 
 .container {
