--- a/WebShopREST/WebShopREST/WebContent/userProfile.css
+++ b/WebShopREST/WebShopREST/WebContent/userProfile.css
@@ -68,25 +68,28 @@ body {
     margin: 30px;
     border-radius: 25px;
     float: left;
+    height: 210px;
 }
 
 .container-data {
     display: block;
     background: rgba(199, 207, 199, 0.76);
-    width: 70%;
+    width: 68.4%;
     padding: 30px;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
     margin-top: 30px;
     margin-bottom: 30px;
     margin-right: 30px;
     border-radius: 25px;
-    float: right;
+    float: left;
     height: 210px;
+    
 }
 
 .container .labels {
     float: left;
     padding-right: 10px;
+    line-height: 1.35;
 }
 
 .container .datas {
