--- a/WebShopREST/WebShopREST/WebContent/restaurant.css
+++ b/WebShopREST/WebShopREST/WebContent/restaurant.css
@@ -20,50 +20,15 @@ body {
 	color: black;
 }
 
-.promoText {
+#promoText {
 	color: black;
 	font-family: Lucida Handwriting;
 	text-align: left;
 	font-size: 40px;
+    margin-left: 30px;
 }
 
-.navBtns {
-	color: black;
-	font-weight: 200;
-	background-color: rgb(241, 190, 72);
-	width: 110px;
-	height: 40px;
-	font-size: 15px;
-	border-style: ridge;
-	border-radius: 15px;
-	border-color: rgb(214, 164, 45);
-	border-width: 3px;
-	font-weight: bold;
-	float: right;
-	margin-top: 0.5%;
-	margin-right: 1%;
-	cursor: pointer;
-}
-
-#navBar {
-	list-style: none;
-	display: flex;
-}
-
-.photo {
-	width: 100px;
-	height: 100px;
-}
-
-#searchIcon {
-	width: 27px;
-	height: 27px;
-	position: relative;
-	top: 14px;
-	right: 2px;
-}
-
-#restaurantsRectangle{
+#restaurantRectangle{
 	position: relative;
     background: rgba(241, 190, 72, 0.774);
 	display: grid;
@@ -71,7 +36,80 @@ body {
 	border-radius: 25px;
 }
 
-#restaurantsTable {
+#changeBtn {
+	color: black;
+	font-weight: 200;
+	background-color: rgb(241, 190, 72);
+	width: 160px;
+	height: 40px;
+	font-size: 15px;
+	border-style: ridge;
+	border-radius: 15px;
+	border-color: rgb(214, 164, 45);
+	border-width: 3px;
+	font-weight: bold;
+	float: left;
+	margin-top: 0.5%;
+	margin-left: 30px;
+	cursor: pointer;
+}
+
+.container {
+    display: block;
+    width: auto;
+}
+
+.container-pic {
+    display: block;
+    background: rgba(199, 207, 199, 0.76);
+    width: 210px;
+    padding: 30px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+    margin: 30px;
+    border-radius: 25px;
+    float: left;
+    height: 210px;
+}
+
+.container-data {
+    display: block;
+    background: rgba(199, 207, 199, 0.76);
+    width: 68.4%;
+    padding: 30px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-right: 30px;
+    border-radius: 25px;
+    float: left;
+    height: 210px;
+    
+}
+
+.container .labels {
+    float: left;
+    padding-right: 10px;
+    line-height: 1.35;
+}
+
+.container .datas {
+    float: left;
+}
+
+.label {
+    color: black;
+	font-size: 19.5pt;
+    padding-bottom: 5px;
+    margin: 5px;
+    height: 20px;
+}
+
+.photo {
+	width: 100px;
+	height: 100px;
+}
+
+#articlesTable {
 	border-spacing: 0px;
 	border-style: ridge;
 	border-radius: 15px;
@@ -97,44 +135,12 @@ tr {
 	cursor: pointer;
 }
 
-input, select {
-	padding: 5px;
-}
-
-div button {
-	padding: 5px;
-}
-
-#typesFilter {
-	float: left;
-	padding-right: 5%;
-}
-
-#statusFilter {
-	float: left;
-}
-
 .inputBoxes {
 	border-radius: 15px;
 	text-align: left;
 	height: 20px;
 	background-color: rgb(199, 207, 199);
-	font-size: 13pt;
-}
-
-.dropdownBoxes {
-	border-radius: 15px;
-	text-align: left;
-	height: 33px;
-	width: 165px;
-	background-color: rgb(199, 207, 199);
-	font-size: 13pt;
-	cursor: pointer;
-}
-
-.searchText {
-	color: black;
-	font-weight: bold;
-	padding-right: 13px;
-	font-size: 13pt;
+	font-size: 17pt;
+    margin: 5px;
+    width: 400px;
 }
