--- a/WebShopREST/WebShopREST/WebContent/index.css
+++ b/WebShopREST/WebShopREST/WebContent/index.css
@@ -41,7 +41,7 @@ body {
 	font-weight: bold;
 	float: right;
 	margin-top: 0.5%;
-	margin-right: 1%;
+	margin-right: 10px;
 	cursor: pointer;
 }
 
@@ -82,6 +82,7 @@ body {
 	background-color: rgba(199, 207, 199, 0.76);
 	color: black;
 	font-size: 12pt;
+	margin: 10px;
 }
 
 td, th {
