--- a/WebShopREST/WebShopREST/WebContent/restaurant.css
+++ b/WebShopREST/WebShopREST/WebContent/restaurant.css
@@ -69,31 +69,48 @@ body {
     border-radius: 25px;
     float: left;
     height: 210px;
+    border-spacing: 0px;
+	border-style: ridge;
+	border-radius: 15px;
+	border-color: rgb(214, 164, 45);
+	border-width: 3px;
 }
 
-.container-data {
-    display: block;
+.container-data-labels {
     background: rgba(199, 207, 199, 0.76);
-    width: 68.4%;
+    width: 200px;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    padding-top: 30px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-radius: 25px;
+    float: left;
+    height: 210px;
+    border-spacing: 0px;
+	border-style: ridge;
+	border-radius: 15px;
+	border-color: rgb(214, 164, 45);
+	border-width: 3px;
+}
+
+.container-data-data {
+    background: rgba(199, 207, 199, 0.76);
+    width: auto;
     padding: 30px;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
     margin-top: 30px;
     margin-bottom: 30px;
-    margin-right: 30px;
     border-radius: 25px;
     float: left;
     height: 210px;
-    
-}
-
-.container .labels {
-    float: left;
-    padding-right: 10px;
-    line-height: 1.35;
-}
-
-.container .datas {
-    float: left;
+    position: relative;
+    border-spacing: 0px;
+	border-style: ridge;
+	border-radius: 15px;
+	border-color: rgb(214, 164, 45);
+	border-width: 3px;
 }
 
 .label {
@@ -120,18 +137,19 @@ body {
 	background-color: rgba(199, 207, 199, 0.76);
 	color: black;
 	font-size: 12pt;
+	margin: 10px;
 }
 
-td, th {
+#articlesTable td, #articlesTable th {
 	padding: 15px;
 	border-bottom: 1px solid rgb(177, 135, 38);
 }
 
-tr.selected {
+#articlesTable tr.selected {
 	background: lightblue;
 }
 
-tr {
+#articlesTable tr {
 	cursor: pointer;
 }
 
