--- a/WebShopREST/WebShopREST/WebContent/manager.css
+++ b/WebShopREST/WebShopREST/WebContent/manager.css
@@ -42,12 +42,22 @@ body {
 	font-size: 13pt;
 }
 
-.inputBoxes {
+#inputBox {
 	border-radius: 15px;
 	text-align: left;
 	height: 20px;
 	background-color: rgb(199, 207, 199);
 	font-size: 13pt;
+}
+
+.inputBoxes {
+	border-radius: 15px;
+	text-align: left;
+	height: 20px;
+	background-color: rgb(199, 207, 199);
+	font-size: 17pt;
+    margin: 5px;
+    width: 400px;
 }
 
 .dropdownBoxes {
@@ -84,19 +94,19 @@ input, select {
 	background-color: rgba(199, 207, 199, 0.76);
 	color: black;
 	font-size: 12pt;
-    margin: 10px;
+	margin: 10px;
 }
 
-td, th {
+#articlesTable td, #articlesTable th {
 	padding: 15px;
 	border-bottom: 1px solid rgb(177, 135, 38);
 }
 
-tr.selected {
+#articlesTable tr.selected {
 	background: lightblue;
 }
 
-tr {
+#articlesTable tr {
 	cursor: pointer;
 }
 
@@ -149,15 +159,15 @@ tr {
 	border-width: 3px;
 }
 
-.container-data {
-    display: block;
+.container-data-labels {
     background: rgba(199, 207, 199, 0.76);
-    width: 68.4%;
-    padding: 30px;
+    width: 200px;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    padding-top: 30px;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
     margin-top: 30px;
     margin-bottom: 30px;
-    margin-right: 10px;
     border-radius: 25px;
     float: left;
     height: 210px;
@@ -168,14 +178,22 @@ tr {
 	border-width: 3px;
 }
 
-.container .labels {
+.container-data-data {
+    background: rgba(199, 207, 199, 0.76);
+    width: auto;
+    padding: 30px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-radius: 25px;
     float: left;
-    padding-right: 10px;
-    line-height: 1.35;
-}
-
-.container .datas {
-    float: left;
+    height: 210px;
+    position: relative;
+    border-spacing: 0px;
+	border-style: ridge;
+	border-radius: 15px;
+	border-color: rgb(214, 164, 45);
+	border-width: 3px;
 }
 
 .label {
