--- a/WebShopREST/WebShopREST/WebContent/css/administrator.css
+++ b/WebShopREST/WebShopREST/WebContent/css/administrator.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url('background.jpg');
+	background-image: url('../images/background.jpg');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
