--- a/WebShopREST/WebShopREST/WebContent/css/articleUpdate.css
+++ b/WebShopREST/WebShopREST/WebContent/css/articleUpdate.css
@@ -8,7 +8,7 @@
 }
 
 body {
-	background-image: url('background.jpg');
+	background-image: url('../images/background.jpg');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
