--- a/WebShopREST/WebShopREST/WebContent/css/managerRegister.css
+++ b/WebShopREST/WebShopREST/WebContent/css/managerRegister.css
@@ -9,7 +9,7 @@
 }
 
 body {
-	background-image: url('background.jpg');
+	background-image: url('../images/background.jpg');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
