--- a/WebShopREST/WebShopREST/WebContent/css/administrator.css
+++ b/WebShopREST/WebShopREST/WebContent/css/administrator.css
@@ -133,3 +133,21 @@ tr {
 	margin-top: 0.5%;
 	margin-right: 1%;
 }
+
+.tabBtns {
+	cursor: pointer;
+	color: black;
+	font-weight: 200;
+	background-color: rgb(190, 190, 190);
+	width: 180px;
+	height: 40px;
+	font-size: 15px;
+	border-style: ridge;
+	border-radius: 15px;
+	border-color: rgb(214, 164, 45);
+	border-width: 3px;
+	font-weight: bold;
+	float: left;
+	margin-top: 0.1%;
+	margin-right: 0.2%;
+}
