--- a/WebShopREST/WebShopREST/WebContent/css/userProfile.css
+++ b/WebShopREST/WebShopREST/WebContent/css/userProfile.css
@@ -11,6 +11,24 @@ body {
 	border-radius: 25px;
 }
 
+.menuBtns {
+	color: black;
+	font-weight: 200;
+	background-color: rgb(241, 190, 72);
+	width: 110px;
+	height: 40px;
+	font-size: 15px;
+	border-style: ridge;
+	border-radius: 15px;
+	border-color: rgb(214, 164, 45);
+	border-width: 3px;
+	font-weight: bold;
+	float: right;
+	margin-top: 0.5%;
+	margin-right: 1%;
+	cursor: pointer;
+}
+
 #titleText {
 	font-family: Lucida Handwriting;
 	text-align: center;
@@ -35,23 +53,6 @@ body {
 	place-items: left;
 	border-radius: 25px;
     padding-bottom: 100px;
-}
-
-#changeBtn {
-	color: black;
-	font-weight: 200;
-	background-color: rgb(241, 190, 72);
-	width: 160px;
-	height: 40px;
-	font-size: 15px;
-	border-style: ridge;
-	border-radius: 15px;
-	border-color: rgb(214, 164, 45);
-	border-width: 3px;
-	font-weight: bold;
-	float: right;
-	margin: 10px;
-	cursor: pointer;
 }
 
 .container {
