--- a/WebShopREST/WebShopREST/WebContent/css/manager.css
+++ b/WebShopREST/WebShopREST/WebContent/css/manager.css
@@ -42,6 +42,32 @@ body {
 	font-size: 13pt;
 }
 
+.actionBtn {
+	cursor: pointer;
+	color: black;
+	font-weight: 200;
+	background-color: rgb(241, 190, 72);
+	width: 180px;
+	height: 40px;
+	font-size: 15px;
+	border-style: ridge;
+	border-radius: 15px;
+	border-color: rgb(214, 164, 45);
+	border-width: 3px;
+	font-weight: bold;
+	float: right;
+	margin-top: 0.5%;
+	margin-right: 1%;
+}
+
+.inputBox {
+	border-radius: 15px;
+	text-align: left;
+	height: 20px;
+	background-color: rgb(199, 207, 199);
+	font-size: 13pt;
+}
+
 #inputBox {
 	border-radius: 15px;
 	text-align: left;
@@ -107,6 +133,33 @@ input, select {
 }
 
 #articlesTable tr {
+	cursor: pointer;
+}
+
+#usersTable {
+	border-spacing: 0px;
+	border-style: ridge;
+	border-radius: 15px;
+	border-color: rgb(214, 164, 45);
+	border-width: 3px;
+	font-family: Georgia, serif;
+	text-align: center;
+	background-color: rgba(199, 207, 199, 0.76);
+	color: black;
+	font-size: 12pt;
+	margin: 10px;
+}
+
+#usersTable td, #usersTable th {
+	padding: 15px;
+	border-bottom: 1px solid rgb(177, 135, 38);
+}
+
+#usersTable tr.selected {
+	background: lightblue;
+}
+
+#usersTable tr {
 	cursor: pointer;
 }
 
