--- a/WebShopREST/WebShopREST/WebContent/css/restaurant.css
+++ b/WebShopREST/WebShopREST/WebContent/css/restaurant.css
@@ -95,6 +95,24 @@ body {
 	border-width: 3px;
 }
 
+.actionBtn {
+	cursor: pointer;
+	color: black;
+	font-weight: 200;
+	background-color: rgb(241, 190, 72);
+	width: 180px;
+	height: 40px;
+	font-size: 15px;
+	border-style: ridge;
+	border-radius: 15px;
+	border-color: rgb(214, 164, 45);
+	border-width: 3px;
+	font-weight: bold;
+	float: right;
+	margin-top: 0.5%;
+	margin-right: 1%;
+}
+
 .container-data-data {
     background: rgba(199, 207, 199, 0.76);
     width: auto;
