--- a/WebShopREST/WebShopREST/WebContent/css/userProfile.css
+++ b/WebShopREST/WebShopREST/WebContent/css/userProfile.css
@@ -11,6 +11,24 @@ body {
 	border-radius: 25px;
 }
 
+.actionBtn {
+	cursor: pointer;
+	color: black;
+	font-weight: 200;
+	background-color: rgb(241, 190, 72);
+	width: 180px;
+	height: 40px;
+	font-size: 15px;
+	border-style: ridge;
+	border-radius: 15px;
+	border-color: rgb(214, 164, 45);
+	border-width: 3px;
+	font-weight: bold;
+	float: right;
+	margin-top: 0.5%;
+	margin-right: 1%;
+}
+
 .menuBtns {
 	color: black;
 	font-weight: 200;
@@ -39,6 +57,22 @@ body {
 }
 
 #promoText {
+	color: black;
+	font-family: Lucida Handwriting;
+	text-align: left;
+	font-size: 40px;
+    margin-left: 30px;
+}
+
+#promoTextMyOrders {
+	color: black;
+	font-family: Lucida Handwriting;
+	text-align: left;
+	font-size: 40px;
+    margin-left: 30px;
+}
+
+#promoTextOrdersOnWait {
 	color: black;
 	font-family: Lucida Handwriting;
 	text-align: left;
@@ -122,6 +156,22 @@ body {
     height: 20px;
 }
 
+#searchIcon {
+	width: 27px;
+	height: 27px;
+	position: relative;
+	top: 14px;
+	right: 2px;
+}
+
+.inputBox {
+	border-radius: 15px;
+	text-align: left;
+	height: 20px;
+	background-color: rgb(199, 207, 199);
+	font-size: 13pt;
+}
+
 .inputBoxes {
 	border-radius: 15px;
 	text-align: left;
@@ -145,7 +195,26 @@ body {
     margin: 10px;
 }
 
+#ordersOnWaitTable {
+	border-spacing: 0px;
+	border-style: ridge;
+	border-radius: 15px;
+	border-color: rgb(214, 164, 45);
+	border-width: 3px;
+	font-family: Georgia, serif;
+	text-align: center;
+	background-color: rgba(199, 207, 199, 0.76);
+	color: black;
+	font-size: 12pt;
+    margin: 10px;
+}
+
 #articlesTable td, #articlesTable th {
+	padding: 15px;
+	border-bottom: 1px solid rgb(177, 135, 38);
+}
+
+#ordersOnWaitTable td, #ordersOnWaitTable th {
 	padding: 15px;
 	border-bottom: 1px solid rgb(177, 135, 38);
 }
@@ -154,8 +223,30 @@ body {
 	background: lightblue;
 }
 
+#ordersOnWaitTable tr.selected {
+	background: lightblue;
+}
+
 #articlesTable tr {
 	cursor: pointer;
+}
+
+#ordersOnWaitTable tr {
+	cursor: pointer;
+}
+
+.dropdownBoxes {
+	border-radius: 15px;
+	text-align: left;
+	height: 33px;
+	width: 165px;
+	background-color: rgb(199, 207, 199);
+	font-size: 13pt;
+	cursor: pointer;
+}
+
+input, select {
+	padding: 5px;
 }
 
 .searchText {
