--- a/WebShopREST/WebShopREST/WebContent/css/restaurantAdd.css
+++ b/WebShopREST/WebShopREST/WebContent/css/restaurantAdd.css
@@ -179,3 +179,17 @@ form .dataManager select:focus {
     border-color: silver;
     border-bottom-width: 2px;
 }
+
+.map {
+	padding: 5px;
+	margin: 5px;
+    margin-bottom: 15px;
+	width: 100%;
+	height: 200px;
+	border-spacing: 0px;
+	border-style: ridge;
+	border-radius: 5px;
+	border-color: rgb(214, 164, 45);
+	border-width: 2px;
+	box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+}
